# RAG

./: .gitignore  pyproject.toml  requirements.txt
data/: text_data.txt
noteboks/: 1_doc_loading.ipynb  2_text_splitters.ipynb  3_vector_embeddings_and_vector_db.ipynb  4_rag_pdf_bot.ipynb
noteboks/vector_db/: chroma.sqlite3
